cambios sign in

--- a/sign-in-cover.html
+++ b/sign-in-cover.html
@@ -35,25 +35,25 @@
       <div class="col-12 col-lg-6 col-xl-4 border-top-wide border-primary d-flex flex-column justify-content-center">
         <div class="container container-tight my-5 px-lg-5">
           <div class="text-center mb-4">
-            <a href="." class="navbar-brand navbar-brand-autodark"><img src="./static/logo.svg" height="36" alt=""></a>
+            <a href="." class="navbar-brand navbar-brand-autodark"><img src="./static/logo-no-background.svg" height="30" alt=""></a>
           </div>
           <h2 class="h3 text-center mb-3">
-            Login to your account
+            Ingresar a mi cuenta
           </h2>
           <form action="./" method="get" autocomplete="off" novalidate>
             <div class="mb-3">
-              <label class="form-label">Email address</label>
-              <input type="email" class="form-control" placeholder="your@email.com" autocomplete="off">
+              <label class="form-label">Correo electrónico</label>
+              <input type="email" class="form-control" placeholder="ej: usuario@email.com" autocomplete="off">
             </div>
             <div class="mb-2">
               <label class="form-label">
-                Password
+                Contraseña
                 <span class="form-label-description">
-                  <a href="./forgot-password.html">I forgot password</a>
+                  <a href="./forgot-password.html">Olvidé mi contraseña</a>
                 </span>
               </label>
               <div class="input-group input-group-flat">
-                <input type="password" class="form-control"  placeholder="Your password"  autocomplete="off">
+                <input type="password" class="form-control"  placeholder="ej: clave1234"  autocomplete="off">
                 <span class="input-group-text">
                   <a href="#" class="link-secondary" title="Show password" data-bs-toggle="tooltip"><!-- Download SVG icon from http://tabler-icons.io/i/eye -->
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" /><path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6" /></svg>
@@ -64,21 +64,21 @@
             <div class="mb-2">
               <label class="form-check">
                 <input type="checkbox" class="form-check-input"/>
-                <span class="form-check-label">Remember me on this device</span>
+                <span class="form-check-label">Recordarme en este dispositivo</span>
               </label>
             </div>
             <div class="form-footer">
-              <button type="submit" class="btn btn-primary w-100">Sign in</button>
+              <button type="submit" class="btn btn-primary w-100">Ingresar</button>
             </div>
           </form>
           <div class="text-center text-secondary mt-3">
-            Don't have account yet? <a href="./sign-up.html" tabindex="-1">Sign up</a>
+            ¿Crear cuenta? <a href="./sign-up.html" tabindex="-1">Registrarme</a>
           </div>
         </div>
       </div>
       <div class="col-12 col-lg-6 col-xl-8 d-none d-lg-block">
         <!-- Photo -->
-        <div class="bg-cover h-100 min-vh-100" style="background-image: url(./static/photos/finances-us-dollars-and-bitcoins-currency-money-2.jpg)"></div>
+        <div class="bg-cover h-100 min-vh-100" style="background-image: url(./static/photos/cuantomide2.jpg)"></div>
       </div>
     </div>
     <!-- Libs JS -->
