--- a/sign-in-link.html
+++ b/sign-in-link.html
@@ -12,46 +12,45 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Sign in link - Tabler - Premium and Open Source dashboard template with responsive and high quality UI.</title>
-    <!-- CSS files -->
-    <link href="./dist/css/tabler.min.css?1692870487" rel="stylesheet"/>
-    <link href="./dist/css/tabler-flags.min.css?1692870487" rel="stylesheet"/>
-    <link href="./dist/css/tabler-payments.min.css?1692870487" rel="stylesheet"/>
-    <link href="./dist/css/tabler-vendors.min.css?1692870487" rel="stylesheet"/>
-    <link href="./dist/css/demo.min.css?1692870487" rel="stylesheet"/>
+    <title>Confirmación de correo</title>
+    <!--CSS files -->
+    <link href="./dist/css/tabler.min.css?1692870487" rel="stylesheet"/>    
+    <link href="./dist/css/sign-in-link.css" rel="stylesheet"/> <!--*******ESTABA MAL LA RUTA LA CONCHA DE LA LORA*********-->
     <style>
       @import url('https://rsms.me/inter/inter.css');
       :root {
       	--tblr-font-sans-serif: 'Inter Var', -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
       }
       body {
-      	font-feature-settings: "cv03", "cv04", "cv11";
+      	font-feature-settings: "cv03", "cv04", "cv11";        
       }
     </style>
   </head>
   <body  class=" d-flex flex-column">
     <script src="./dist/js/demo-theme.min.js?1692870487"></script>
-    <div class="page page-center">
+    <div class="page page-center background-image">
       <div class="container container-tight py-4">
         <div class="text-center mb-4">
           <a href="." class="navbar-brand navbar-brand-autodark">
-            <img src="./static/logo.svg" width="110" height="32" alt="Tabler" class="navbar-brand-image">
+            <img src="./static/logo-no-background.svg" width="110" height="62" alt="Domination" class="navbar-brand-image">
           </a>
         </div>
         <div class="text-center">
           <div class="my-5">
-            <h2 class="h1">Check your inbox</h2>
+            <h2 class="h1">Revisa tu correo</h2>
             <p class="fs-h3 text-secondary">
-              We've sent you a magic link to <strong>support@tabler.io</strong>.<br />
-              Please click the link to confirm your address.
+              Hemos enviado un email a <strong>support@tabler.io</strong>.<br />
+              Haz click en el enlace recibido para confirmar tu dirección de correo electrónico.
             </p>
           </div>
           <div class="text-center text-secondary mt-3">
-            Can't see the email? Please check the spam folder.<br />
-            Wrong email? Please <a href="#">re-enter your address</a>.
+            Si no puedes ver el correo, por favor revisa tu correo spam.<br />
+            ¿Dirección de correo errónea? <a href="#">Reingresa tu correo electrónico</a>.
           </div>
-        </div>
+        </div>        
       </div>
+      <!-- Photo ***** ACÁ METÍ UNA FOTO PERO ES IMPOSIBLE PONERLA COMO FONDO (cubre la parte inferior de la página)-->
+      <!--<div class="bg-cover h-100 min-vh-50" style="background-image: url(./static/photos/a-woman-works-on-a-laptop-at-home-2.jpg)"></div>-->
     </div>
     <!-- Libs JS -->
     <!-- Tabler Core -->
