--- a/sign-up.html
+++ b/sign-up.html
@@ -12,13 +12,13 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Sign up - Tabler - Premium and Open Source dashboard template with responsive and high quality UI.</title>
+    <title>Registro de usuario</title>
     <!-- CSS files -->
-    <link href="./dist/css/tabler.min.css?1692870487" rel="stylesheet"/>
-    <link href="./dist/css/tabler-flags.min.css?1692870487" rel="stylesheet"/>
-    <link href="./dist/css/tabler-payments.min.css?1692870487" rel="stylesheet"/>
-    <link href="./dist/css/tabler-vendors.min.css?1692870487" rel="stylesheet"/>
-    <link href="./dist/css/demo.min.css?1692870487" rel="stylesheet"/>
+    <link href="./dist/css/tabler.min.css" rel="stylesheet"/>
+   <!-- <link href="./dist/css/tabler-flags.min.css" rel="stylesheet"/>
+    <link href="./dist/css/tabler-payments.min.css" rel="stylesheet"/>
+    <link href="./dist/css/tabler-vendors.min.css" rel="stylesheet"/>
+    <link href="./dist/css/demo.min.css" rel="stylesheet"/> -->
     <style>
       @import url('https://rsms.me/inter/inter.css');
       :root {
@@ -30,7 +30,7 @@
     </style>
   </head>
   <body  class=" d-flex flex-column">
-    <script src="./dist/js/demo-theme.min.js?1692870487"></script>
+    <script src="./dist/js/demo-theme.min.js"></script>
     <div class="page page-center">
       <div class="container container-tight py-4">
         <div class="text-center mb-4">
@@ -40,15 +40,22 @@
         </div>
         <form class="card card-md" action="./" method="get" autocomplete="off" novalidate>
           <div class="card-body">
-            <h2 class="card-title text-center mb-4">Create new account</h2>
+            <h2 class="card-title text-center mb-4">Crear cuenta</h2>
             <div class="mb-3">
               <label class="form-label">Name</label>
               <input type="text" class="form-control" placeholder="Enter name">
             </div>
+
+            <div class="mb-3">
+              <label class="form-label">Room adress</label>
+              <input type="text" class="form-control" placeholder="adress sala">
+            </div>
+
             <div class="mb-3">
               <label class="form-label">Email address</label>
               <input type="email" class="form-control" placeholder="Enter email">
             </div>
+            
             <div class="mb-3">
               <label class="form-label">Password</label>
               <div class="input-group input-group-flat">
@@ -60,6 +67,8 @@
                 </span>
               </div>
             </div>
+
+
             <div class="mb-3">
               <label class="form-check">
                 <input type="checkbox" class="form-check-input"/>
@@ -78,7 +87,7 @@
     </div>
     <!-- Libs JS -->
     <!-- Tabler Core -->
-    <script src="./dist/js/tabler.min.js?1692870487" defer></script>
-    <script src="./dist/js/demo.min.js?1692870487" defer></script>
+    <script src="./dist/js/tabler.min.js" defer></script>
+    <script src="./dist/js/demo.min.js" defer></script>
   </body>
 </html>
