cambios sign-up

--- a/sign-in-link.html
+++ b/sign-in-link.html
@@ -15,7 +15,7 @@
     <title>Confirmación de correo</title>
     <!--CSS files -->
     <link href="./dist/css/tabler.min.css?1692870487" rel="stylesheet"/>    
-    <link href="./dist/css/sign-in-link.css" rel="stylesheet"/> <!--*******ESTABA MAL LA RUTA LA CONCHA DE LA LORA*********-->
+    <link href="./dist/css/sign-in-up-link.css" rel="stylesheet"/> <!--*******ESTABA MAL LA RUTA LA CONCHA DE LA LORA*********-->
     <style>
       @import url('https://rsms.me/inter/inter.css');
       :root {
