pruebas fondo  sign-up

--- a/sign-up-pruebaGPT.html
+++ b/sign-up-pruebaGPT.html
@@ -62,11 +62,11 @@
                                 <div class="row">
                                     <div class="col-md-6 mb-3"> <!-- 50% del espacio de su contenedor -->
                                         <label class="form-label">Nombre</label>
-                                        <input type="text" class="form-control" placeholder="Enter name" required>
+                                        <input type="text" class="form-control" placeholder="Nombre/s" required>
                                     </div>
                                     <div class="col-md-6 mb-3"> <!-- 50% del espacio de su contenedor -->
                                         <label class="form-label">Apellido</label>
-                                        <input type="text" class="form-control" placeholder="Enter surname" required>
+                                        <input type="text" class="form-control" placeholder="Apellido/s" required>
                                     </div>
                                 </div>
                     
@@ -91,9 +91,9 @@
                                 </div>
 
                                 <div class="mb-3">
-                                    <label class="form-label">Password</label> <!--HAY QUE VALIDAR LOS CAMPOS DEL LADO DEL SERVER!!!!!!-->
+                                    <label class="form-label">Contraseña</label> <!--HAY QUE VALIDAR LOS CAMPOS DEL LADO DEL SERVER!!!!!!-->
                                     <div class="input-group input-group-flat">
-                                        <input type="password" class="form-control" placeholder="Password" autocomplete="off" minlength="8" maxlength="20" required>
+                                        <input type="password" class="form-control" placeholder="entre 8 y 20 caracteres" autocomplete="off" minlength="8" maxlength="20" required>
                                         <span class="input-group-text">
                                             <a href="#" class="link-secondary" title="Show password" data-bs-toggle="tooltip">
                                                 <!-- SVG icon -->
@@ -119,7 +119,7 @@
                 
 
                     <div class="mb-3">
-                        <label class="form-label">Password</label>
+                        <label class="form-label">Contraseña</label>
                         <div class="input-group input-group-flat">
                             <input type="password" class="form-control" placeholder="Password" autocomplete="off">
                             <span class="input-group-text">
@@ -148,8 +148,8 @@
                 <button type="submit" class="btn btn-primary w-70">Crear cuenta</button>
             </div>
 
-            <div class="text-center text-primary mt-3 mb-3">
-                Already have an account? <a href="./sign-in-cover.html" tabindex="-1">Sign in</a>
+            <div class="text-center text-light haveAccount mt-3 mb-3">
+                ¿Ya tienes una cuenta? <a href="./sign-in-cover.html" tabindex="-1">Ingresar</a>
             </div>
         </div>
     </div>
